# BalrogCatPreyAnalyzer

./: .gitignore  LICENSE  README.md  __init__.py  balrog-dbg.sh  balrog.sh  camera_class.py  cascade.py  catCam_starter.sh  config-template.toml  config.py  config.toml  dbg-catCam.sh  detection_callbacks.py  flap_locker.py  image_container.py  main_loop.py  model_stages.py  pyproject.toml  requirements.txt  telegram_bot.py  utils.py
balrog/: __init__.py  __main__.py  config.py
balrog/camera/: __init__.py  camera_class.py
balrog/interface/: __init__.py  flap_locker.py  telegram_bot.py
balrog/processor/: __init__.py  cascade.py  detection_callbacks.py  image_container.py  main_loop.py  model_stages.py
balrog/utils/: __init__.py  utils.py
log/: info.xml
