[project]
name = "Balrog"
description = "A Cat Prey Analyzer software, based on tensorflow"
version = 0.1
required-python= "==3.11"
dependencies = [
    "cython==3.0.6",
    "jupyter==1.0.0",
    "pillow==10.0.0",
    "lxml==4.9.3",
    "matplotlib==3.7.2",
    "opencv-python==4.8.0.76",
    "protobuf==4.24.2",
    "python-telegram-bot==13.3",
    "tensorflow==2.13.0",
    "surepy==0.8.0"
]
authors = { name = "Yo", email = "yo@yo.com" }

