[project]
name = "balrog-prey-analyzer"
description = "A Cat Prey Analyzer software, based on tensorflow, and OpenCV."
keywords = ["cat", "prey", "opencv", "tensorflow", "telegram", "surepet"]
version = "0.1"
readme = "README.md"
license = { file= "LICENSE" }
requires-python = ">= 3.11, <3.12"
dependencies = [
    "cython==3.0.6",
    "jupyter==1.0.0",
    "pillow==10.0.0",
    "lxml==4.9.3",
    "matplotlib==3.7.2",
    "opencv-contrib-python-headless==4.8.1.78",
    "protobuf==4.24.2",
    "python-telegram-bot==13.3",
    "tensorflow==2.13.0",
    "surepy>=0.9.0",
    "pytype>=2023.12.18 "
]
authors = [
    { name = "niciBume", email = "unknown@example.com" },
    { name = "Diego Rivera", email = "dieriverav@gmail.com" }
]
maintainers = [
    { name = "Diego Rivera", email = "dieriverav@gmail.com" }
]

[tool.setuptools]
py-modules = ["balrog"]

[tool.pytype]
inputs = ['balrog']
